@@ -2,6 +2,8 @@
 
 	* generic/tclDecls.h  [Bug 3029891] Functions that don't belong in the
 	* generic/tclTest.c   stub table.
+	* generic/tclBasic.c  From [Bug 3030870] make itcl 3.x built with pre-8.6
+	work in 8.6: Relax the relation between Tcl_CallFrame and CallFrame.
 
 2010-07-16  Donal K. Fellows  <dkf@users.sf.net>
 
